# phstatus

./: .gitignore  CMakeLists.txt  Readme.md  dependencies.txt  example_comfig.yaml
bars/: lemonbar.cpp  lemonbar.h  stdoutbar.cpp  stdoutbar.h
include/: bar.h  build_config.h  build_config.h.in  color.h  config_parsing.h  init.h  plugin.h  pluginloader.h  shellplugin.h
plugins/battery/: battery.cmake  battery.cpp  battery.h
plugins/i3activewindow/: i3activewindow.cmake  i3activewindow.cpp  i3activewindow.h
plugins/i3workspace/: i3workspace.cmake  i3workspace.cpp  i3workspace.h
plugins/load/: load.cmake  load.cpp  load.h
plugins/memory/: memory.cmake  memory.cpp  memory.h
plugins/pulsevolume/: pulsevolume.cmake  pulsevolume.cpp  pulsevolume.h
plugins/testplugin/: testplugin.cmake  testplugin.cpp  testplugin.h
plugins/thermal/: thermal.cmake  thermal.cpp  thermal.h
plugins/time/: time.cmake  time.cpp  time.h
plugins/tsdisplay/: tsdisplay.cmake  tsdisplay.cpp  tsdisplay.h
plugins/weather/: weather.cmake  weather.cpp  weather.h
shellplugins/: disku  load  memory  sound_alsa  sound_pulse  thermal  time
src/: color.cpp  init.cpp  main.cpp  plugin.cpp  pluginloader.cpp.in  shellplugin.cpp
